data/derived/sp14/progs/unify/prog1124.ml.out
Characters 50-53:
  let fixpoint (f,b) = wwhile((let g x = f x !=x in g b), b);;
                                                    ^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
